--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,20 +1,21 @@
 modLoader="javafml"
-loaderVersion="[34,)"
+loaderVersion="[34.1.0,)"
 license="All rights reserved"
 
 [[mods]]
 
 modId="treemendous"
-version="0.2.0"
+version="0.2.1"
 displayName="Treemendous"
 logoFile="treemendous.png"
 authors="Ian Rehwinkel"
+credits="Thanks to Sebastian Gerdon for making Assets and providing Inspiration"
 description='''This mod adds lot's of trees and forests.'''
 
 [[dependencies.treemendous]]
     modId="forge"
     mandatory=true
-    versionRange="[34,)"
+    versionRange="[34.1.0,)"
     ordering="NONE"
     side="BOTH"
 
