--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -5,11 +5,11 @@ license="All rights reserved"
 [[mods]]
 
 modId="treemendous"
-version="0.3.1"
+version="0.3.2"
 displayName="Treemendous"
 logoFile="treemendous.png"
 authors="Ian Rehwinkel"
-credits="Thanks to Sebastian Gerdon for making Assets and providing Inspiration"
+credits="Thanks to Sebastian Gerdon for making assets and providing inspiration"
 description='''This mod adds lot's of trees and forests.'''
 
 [[dependencies.treemendous]]
