--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '0.4.1'
+version = '1.16.3-0.4.1'
 group = 'deerangle.treemendous' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'treemendous'
 
