added chopping block

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ minecraft {
             property 'forge.logging.markers', 'REGISTRIES'
             property 'forge.logging.console.level', 'debug'
 
+            args '--username', 'Dev##'
+
             mods {
                 treemendous {
                     source sourceSets.main
