--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getPro
 minecraft {
     mappings channel: 'official', version: '1.17.1'
 
-    // potential AT
+    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg') // Currently, this location cannot be changed from the default.
 
     runs {
         client {
@@ -87,7 +87,7 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.17.1-37.0.43'
+    minecraft 'net.minecraftforge:forge:1.17.1-37.0.50'
 }
 
 jar {
