created placeholder methods for all trees, laid foundation for dynamic foliage color, fixed biome dictionary
Signed-off-by: Ian Rehwinkel <ian.rehwinkel@tutanota.com>

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -2,3 +2,6 @@ public-f net.minecraft.world.level.levelgen.StructureSettings f_64580_ # DEFAULT
 public-f net.minecraft.world.level.levelgen.StructureSettings f_64582_ # structureConfig
 public-f net.minecraft.world.level.levelgen.feature.StructureFeature f_67031_ # NOISE_AFFECTING_FEATURES
 public-f net.minecraft.world.level.levelgen.flat.FlatLevelGeneratorSettings f_70349_ # STRUCTURE_FEATURES
+public net.minecraft.world.level.biome.Biome f_47437_ # climateSettings
+public-f net.minecraft.client.multiplayer.ClientLevel f_104558_ # tintCaches
+public net.minecraft.client.renderer.chunk.RenderChunkRegion f_112908_ # level
