--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -5,3 +5,4 @@ public-f net.minecraft.world.level.levelgen.flat.FlatLevelGeneratorSettings f_70
 public net.minecraft.world.level.biome.Biome f_47437_ # climateSettings
 public-f net.minecraft.client.multiplayer.ClientLevel f_104558_ # tintCaches
 public net.minecraft.client.renderer.chunk.RenderChunkRegion f_112908_ # level
+public net.minecraft.world.level.levelgen.feature.trunkplacers.TrunkPlacerType <init>(Lcom/mojang/serialization/Codec;)V # constructor
